Modularize code and continue development of dropdown menus for changing variables
-Add sources to README
-Change style.css to display full pages for each "page"
-Add .splashDiv to index.html

-Change scatterplot.html
	-Reorganize code into better structure as needed
	-Modularize code for reuse
		-Break specific sections of code out into reusable functions
	-Change svg variable to name of scatterSvg
	-Change cursor to default for accidental hovering of tooltip
	-Add options for y variable dropdown menu
	-Create x Dropdown menu code
		-Label
		-select tag
		-option tags
		-xDropdown change event handler
	-Blur focus from use of both x and y variable dropdown menus
	-Declare xAxis and yAxis without values
	-Add regression line functionality to change of mapped variables
	-Add x and y axis updating to change of mapped variables
	-Temporary solution added for better visual display of regression line on certain settings of variables
		-Solution mostly final but some revision still expected
		-Render title and background rect after rendering regression line
	-Update scatterplotTooltip locations to be decided from offset values of x and y
	-Comment out unnecessary code
	-Some erroneous comments will be deleted later
	-Move regression line code inside of update function
	-Change margins of scatterplot inside of div for better look

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -2,9 +2,21 @@ html {
     background-color: white;
 }
 
+body {
+    margin: 0;
+}
+
 h1 {
     color: deeppink;
     text-align: center;
+    margin: 0;
+}
+
+.splash {
+    background-color: blue;
+    height: 100vh;
+    width: 100vw;
+    margin: 0;
 }
 
 /* .line is used for test2 */
@@ -26,6 +38,7 @@ h1 {
 }
 
 .scatterDiv {
-    margin-bottom: 50px;
+    margin-bottom: 0px;
     position: relative;
+    max-height: 100vh;
 }
