--- a/templates/index.html
+++ b/templates/index.html
@@ -9,7 +9,9 @@
 	<script src='https://unpkg.com/simple-statistics@7.0.8/dist/simple-statistics.min.js'></script>
 </head>
 <body>
-	<h1>CHARTizard</h1>
+	<div class="splash">
+		<h1>CHARTizard</h1>
+	</div>
 	<div class="scatterDiv"></div>
 	<!-- <div class="scatterDiv2"></div> -->
     <!-- <p>{{data.name[0]}}</p>
